kubernetes/ingress/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: a493f25082c6740818384ed96954eaff-915660660.ap-south-1.elb.amazonaws.com 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homeapp-service
            port:
              number: 80
      - path: /mobile
        pathType: Prefix
        backend:
          service:
            name: mobileapp-service
            port:
              number: 80
